--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -18,9 +18,10 @@ pytest
 conllu
 sentencepiece != 0.1.92
 protobuf
-ray
+# ray
 transformers
 # 'ray[default]'
 gitpython==3.0.2
 git-python==1.0.3
 gitdb2==3.0.1
+torch
