--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,26 +1,7 @@
-tensorboard
-scikit-learn
-seqeval
-psutil
-sacrebleu
-rouge-score
-tensorflow_datasets
-matplotlib
-git-python==1.0.3
-faiss-cpu
-streamlit
-elasticsearch
-nltk
-pandas
-datasets >= 1.1.3
-fire
-pytest
-conllu
-sentencepiece != 0.1.92
-protobuf
-ray
+faiss-cpu >= 1.6.3
+datasets >= 1.0.1
+psutil >= 5.7.0
+torch >= 1.4.0
 transformers
-# 'ray[default]'
-gitpython==3.0.2
-git-python==1.0.3
-gitdb2==3.0.1
+pytorch-lightning==1.0.4
+gitpython
